Overhauled the script output/error handling.